# eppendorf_2026_code_challenge

./: .gitignore  CMakeLists.txt  README.md
doc/: Challenge.md
src/: event.cpp  event.hpp  main.cpp  tasks.cpp  tasks.hpp
src/Drivers/: STM32F401CCUX_FLASH.ld
src/Drivers/USB_DEVICE/App/: usbd_cdc_if.c
